--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit == 1.16.0
 streamlit_option_menu == 0.3.2
-opencv-python == 4.6.0.66
+opencv-python-headless == 4.6.0.66
 Pillow == 9.3.0
 numpy == 1.24.1
 fer ==  22.4.0
